test-data/compiletest-rs/ui/macros/unreachable-fmt-msg.run.stderr
thread 'main' panicked at 'internal error: entered unreachable code: 6 is not prime', ui/macros/unreachable-fmt-msg.rs:6:5
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
